--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@tanstack/react-query": "^4.29.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.4.0",
     "react": "^18.2.0",
