--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,7 @@
     "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
+    "useUnknownInCatchVariables": true,
   },
   "include": [
     "src"
