--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.8.0"
+    "lowdb": "^6.0.1"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/node": "^20.2.5",
+    "@types/express": "^4.17.17",
+    "@types/lowdb": "^1.0.11",
+    "@types/node": "^20.4.5",
     "cors": "^2.8.5",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
